[package]
name = "rocksdb-util"
version = "0.1.0"
authors = ["Little-Wallace <bupt2013211450@gmail.com>"]
build = "build.rs"
links = "rocksdb-util"

[dependencies]
libc = "0.2.11"

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"
bindgen = { version = "0.57", default-features = false, features = ["runtime"] }
